[CHORE] Fix Restock Ship Texts

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3726,7 +3726,7 @@
   "gems.outOfstock": "Out of stock",
   "gems.shipment.success": "Woohoo, a free shipment of stock has just arrived to replenish the shops.",
   "gems.shipment.arrived": "Ship has arrived",
-  "gems.shipment.shops": "All seeds and tool stock will be replenished at the shops.",
+  "gems.shipment.shops": "These seeds and tools will be replenished at the shops.",
   "faction.shop.title": "Faction Shop",
   "faction.shop.membersOnly": "Faction member exclusive",
   "description.marty": "An FSL champion Morchi.",
