--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -2222,8 +2222,7 @@
   "landscape.hourglass.resourceNodeCondition.ore": "Please ensure no minerals are regenerating before activating the {{selectedChestItem}}.",
   "landscape.timeWarpTotem.resourceNodeCondition": "Please ensure no minerals or trees are regenerating, no crops or fruits are growing, and no cooking buildings are working before activating the {{selectedChestItem}}.",
   "landscape.superTotem.resourceNodeCondition": "Please ensure no minerals or trees are regenerating, no crops or fruits are growing, and no cooking buildings are working before activating the {{selectedChestItem}}.",
-  "landscape.timeWarpTotem.nonStack": "Boost doesn't stack with Super Totem",
-  "landscape.superTotem.nonStack": "Boost doesn't stack with Time Warp Totem",
+  "landscape.timeWarpTotem.nonStack": "Time Warp and Super Totem don't stack.",
   "leaderboard.leaderboard": "Leaderboard",
   "leaderboard.error": "Error loading leaderboard. Please try again later.",
   "leaderboard.initialising": "Calculating your rank. Please try again later.",
