Deduct extraReels when used

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -1136,7 +1136,6 @@
   "error.composterAlreadyBoosted": "Already boosted",
   "error.missingEggs": "Missing Eggs",
   "error.insufficientSFL": "Insufficient SFL",
-  "error.dailyAttemptsExhausted": "Daily attempts exhausted",
   "error.missingRod": "Missing rod",
   "error.missingBait": "Missing ",
   "error.alreadyCasted": "Already casted",
@@ -1426,7 +1425,7 @@
   "fishermanModal.crazyHappening": "Wow, something crazy is happening......It is a fish frenzy!",
   "fishermanModal.fullMoon": "Wow, look at that full moon! I've heard rumours that during this time you have a chance to catch rare Marine Marvels.",
   "fishermanModal.bonusFish": "Hurry, you will get a bonus fish for each catch!",
-  "fishermanModal.dailyLimitReached": "You have reached your daily fishing limit of {{limit}}",
+  "fishermanModal.dailyLimitReached": "You have exhausted all your reels!",
   "fishermanModal.needCraftRod": "You must first craft a rod.",
   "fishermanModal.craft.beach": "Craft at Beach",
   "fishermanModal.zero.available": "0 available",
