[FIX] Add Sunflower Shield to BUMPKIN_ITEM_BUFF_LABELS

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -386,6 +386,7 @@
   "bumpkinItemBuff.golden.spatula.boost": "+10% XP",
   "bumpkinItemBuff.mushroom.hat.boost": "+0.1 Mushrooms",
   "bumpkinItemBuff.parsnip.boost": "+20% Parsnip",
+  "bumpkinItemBuff.sunflower.shield.boost": "Free Sunflower Seeds",
   "bumpkinItemBuff.sunflower.amulet.boost": "+10% Sunflower",
   "bumpkinItemBuff.carrot.amulet.boost": "-20% Carrot Growth time",
   "bumpkinItemBuff.beetroot.amulet.boost": "+20% Beetroot",
