--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -1443,6 +1443,13 @@
   "fishingGuide.condition": "Keep track of the changing tide patterns; specific fish species are only available during certain conditions.",
   "fishingGuide.bait.chum": "Experiment with different types of bait and chum combinations to maximize your chances of catching various fish species.",
   "fishingGuide.legendery.fish": "Beware of legendary fish; they require exceptional skill and strength to catch.",
+  "fishing.dawnlight": "Dawnlight",
+  "fishing.dusktide": "Dusktide",
+  "fishing.reelsLeft": "{{reelsLeft}} reels left",
+  "fishing.extras": "Extras",
+  "fishing.lookingMoreReels": "Ahhh you're looking for more reels? No worries! Check out the options below!",
+  "fishing.finishReels": "Finish your reels before buying more",
+  "fishing.buyReels": "Buy 5 reels with {{gemPrice}} gems",
   "quest.basic.fish": "Catch each basic fish",
   "quest.advanced.fish": "Catch each advanced fish",
   "quest.all.fish": "Discover each basic, advanced, and expert fish",
