--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -2382,6 +2382,7 @@
   "marketplace.itemInUseWarning": "This item is currently being used on your farm. You must first remove it into your chest.",
   "marketplace.noMyListings": "You do not have any listings.",
   "marketplace.offerClaimed": "Congratulations, your offer was accepted!",
+  "marketplace.itemSold": "Congratulations, your item has sold!",
   "megaStore.visit": "Visit the Megastore in the plaza before time runs out!",
   "megaStore.message": "Welcome to the Mega Store! Check out this month's limited items. If you like something, be sure to grab it before it vanishes into the realms of time.",
   "megaStore.month.sale": "This month's sales",
