--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -1446,6 +1446,7 @@
   "fishing.dawnlight": "Dawnlight",
   "fishing.dusktide": "Dusktide",
   "fishing.reelsLeft": "{{reelsLeft}} reels left",
+  "fishing.oneReelLeft": "1 reel left",
   "fishing.extras": "Extras",
   "fishing.lookingMoreReels": "Ahhh you're looking for more reels? No worries! Check out the options below!",
   "fishing.finishReels": "Finish your reels before buying more",
