--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -1425,7 +1425,7 @@
   "fishermanModal.crazyHappening": "Wow, something crazy is happening......It is a fish frenzy!",
   "fishermanModal.fullMoon": "Wow, look at that full moon! I've heard rumours that during this time you have a chance to catch rare Marine Marvels.",
   "fishermanModal.bonusFish": "Hurry, you will get a bonus fish for each catch!",
-  "fishermanModal.dailyLimitReached": "You have exhausted all your reels!",
+  "fishermanModal.fishingLimitReached": "You have exhausted all your reels!",
   "fishermanModal.needCraftRod": "You must first craft a rod.",
   "fishermanModal.craft.beach": "Craft at Beach",
   "fishermanModal.zero.available": "0 available",
@@ -1452,6 +1452,9 @@
   "fishing.finishReels": "Finish your reels before buying more",
   "fishing.buyReels": "Buy 5 reels with {{gemPrice}} gems",
   "fishing.buyReels.confirmation": "Are you sure you want to buy 5 reels for {{gemPrice}} gems?",
+  "fishing.extraReels": "Extra Reels",
+  "fishing.cast": "Cast",
+  "fishing.buyMoreReels": "Buy more reels",
   "quest.basic.fish": "Catch each basic fish",
   "quest.advanced.fish": "Catch each advanced fish",
   "quest.all.fish": "Discover each basic, advanced, and expert fish",
