--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -2856,31 +2856,31 @@
   "npcDialogues.raven.averageFlower": "不完全是我期待的那朵，但也很令人愉快。谢谢。",
   "npcDialogues.raven.badFlower": "这朵花不太对。也许还需要再找一找？",
   "npcDialogues.raven.goodFlower": "这朵紫色的花很完美！谢谢你把它带给我。",
-  "npcDialogues.salty.reward": "啊，谢谢你的配送，伙计。这里有一些东西可以解决你的麻烦。",
-  "npcDialogues.salty.flowerIntro": "是的，海洋的深蓝色是我所追求的。你们见过像大海一样蓝的花吗？",
-  "npcDialogues.salty.averageFlower": "嗯，不完全是我的想法，但它确实可以。谢谢，伙计。",
-  "npcDialogues.salty.badFlower": "这朵花根本行不通。也许再环顾四周就能找到我想要的东西？",
-  "npcDialogues.salty.goodFlower": "是的，这朵蓝花恰到好处！非常感谢你把它带给我。",
-  "npcDialogues.miranda.reward": "感谢你的努力。以下是对您的配送表示感谢的一小段感谢。",
-  "npcDialogues.miranda.flowerIntro": "一朵黄花的活力一定会让我精神振奋。你看见周围有没有？",
+  "npcDialogues.salty.reward": "啊，谢谢你的送货，伙计。手头这里有些东西可以弥补你的麻烦。",
+  "npcDialogues.salty.flowerIntro": "是的，海洋的深蓝是我追求的。你们见过像大海一样蓝的花吗？",
+  "npcDialogues.salty.averageFlower": "嗯，不完全是我想的那朵，但也凑合。谢谢，伙计。",
+  "npcDialogues.salty.badFlower": "这朵花根本行不通。也许再四处走走就能找到我想要的东西？",
+  "npcDialogues.salty.goodFlower": "是哎，这朵蓝花恰到好处！非常感谢你把它带给我。",
+  "npcDialogues.miranda.reward": "感谢你的努力。这里是对您送货的点点感激。",
+  "npcDialogues.miranda.flowerIntro": "黄花的鲜艳一定会让我精神振奋。你周围看到有没有？",
   "npcDialogues.miranda.averageFlower": "这不完全是我所希望的，但它非常迷人。谢谢。",
-  "npcDialogues.miranda.badFlower": "这朵花不太对劲。也许再来一个更合适？",
+  "npcDialogues.miranda.badFlower": "这朵花不太对。也许再换一个会更合适？",
   "npcDialogues.miranda.goodFlower": "这朵黄色的花很可爱！谢谢你把它带给我。",
-  "npcDialogues.cornwell.reward": "感谢您的配送。以下是对你的努力的感激之情。",
-  "npcDialogues.cornwell.flowerIntro": "看到红色、黄色、紫色、白色或蓝色的气球花真是令人愉快...",
-  "npcDialogues.cornwell.averageFlower": "不完全是我所期望的，但它很迷人。谢谢。",
-  "npcDialogues.cornwell.badFlower": "这朵花不太对劲。也许还需要再进行一次搜索？",
-  "npcDialogues.cornwell.goodFlower": "这朵气球花真令人愉快！谢谢你把它带给我。",
-  "npcDialogues.tywin.reward": "感谢您的配送。以下是对你的努力的感激之情。",
-  "npcDialogues.tywin.flowerIntro": "你听说过精美的 Primula Enigma 或迷人的 Celestial Frostbloom 吗？我需要一个。",
-  "npcDialogues.tywin.averageFlower": "不完全是我所希望的，但非常令人愉快。谢谢。",
-  "npcDialogues.tywin.badFlower": "这朵花不太对劲。也许再来一个更合适？",
+  "npcDialogues.cornwell.reward": "感谢您的送货。这里是对你努力的感激之礼。",
+  "npcDialogues.cornwell.flowerIntro": "看到红色、黄色、紫色、白色或蓝色的桔梗花真是令人愉快……",
+  "npcDialogues.cornwell.averageFlower": "不完全是我期望的花，但它很迷人。谢谢。",
+  "npcDialogues.cornwell.badFlower": "这朵花不太对。也许还需要再找一回？",
+  "npcDialogues.cornwell.goodFlower": "这朵桔梗花真令人愉快！谢谢你把它带给我。",
+  "npcDialogues.tywin.reward": "感谢你的配送。以下就是对你努力的回谢。",
+  "npcDialogues.tywin.flowerIntro": "你听说过精美的报春帘花或迷人的天霜花吗？我需要一个。",
+  "npcDialogues.tywin.averageFlower": "不完全是我所希望的，但还算乐见。谢谢。",
+  "npcDialogues.tywin.badFlower": "这朵花不太对。也许再换一个来更合适？",
   "npcDialogues.tywin.goodFlower": "这朵花简直令人叹为观止！谢谢你把它带给我。",
-  "npcDialogues.default.flowerIntro": "你有花要给我吗？确保这是我喜欢的东西。",
+  "npcDialogues.default.flowerIntro": "你有花要给我吗？最好得是我喜欢的。",
   "npcDialogues.default.averageFlower": "哇，谢谢！我喜欢这朵花！",
-  "npcDialogues.default.badFlower": "嗯，这不是我最喜欢的花。但我猜重要的是这个想法。",
+  "npcDialogues.default.badFlower": "嗯，这不是我最喜欢的花。但我觉得重要的是心意吧。",
   "npcDialogues.default.goodFlower": "这是我最喜欢的花！非常感谢！",
-  "npcDialogues.default.reward": "哇，谢谢 Bumpkin。这是一份可以帮助你的小礼物！",
+  "npcDialogues.default.reward": "哇，谢谢乡包佬。这是感激您帮助的小谢礼！",
   "npcDialogues.default.locked": "请明天再来。",
   "npcDialogues.queenVictoria.intro1": "哦，是你。农民，你准备好我的税了吗？",
   "npcDialogues.queenVictoria.intro2": "问候，主题。我相信你已经缴纳了我要求的税款？",
@@ -4325,5 +4325,5 @@
   "gems.shipment.shops": "这些种子和工具将在商店补充。",
   "gems.restockToMaxStock": "补货至最大库存量",
   "restrictionReason.hasBonusAnimals": "{{building}} 中的奖励动物",
-  "landscape.timeWarpTotem.nonStack": "Time Warp 和 Super Totem 无法堆叠。"
+  "landscape.timeWarpTotem.nonStack": "Time Warp Totem 和 Super Totem 无法堆叠。"
 }
