--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -2882,45 +2882,45 @@
   "npcDialogues.default.goodFlower": "这是我最喜欢的花！非常感谢！",
   "npcDialogues.default.reward": "哇，谢谢乡包佬。这是感激您帮助的小谢礼！",
   "npcDialogues.default.locked": "请明天再来。",
-  "npcDialogues.queenVictoria.intro1": "哦，是你。农民，你准备好我的税了吗？",
-  "npcDialogues.queenVictoria.intro2": "问候，主题。我相信你已经缴纳了我要求的税款？",
-  "npcDialogues.queenVictoria.intro3": "你想要什么，农民？我正忙着为王位担心。你给我带来税了吗？",
-  "npcDialogues.queenVictoria.intro4": "哦，我必须容忍的事情。快点，农民。你给我带税了吗？",
-  "npcDialogues.queenVictoria.intro5": "宝座闲置着，而你在这里。我希望你给我带来了税收，农民。",
-  "npcDialogues.queenVictoria.positiveDelivery1": "终于，做对了。你给我带来了税款。假设自己被认可了。",
-  "npcDialogues.queenVictoria.positiveDelivery2": "很好，这就足够了。你带来了税款。你现在可以走了。",
-  "npcDialogues.queenVictoria.positiveDelivery3": "可以接受。你给我带来了税款。也许你并非完全没用。",
-  "npcDialogues.queenVictoria.positiveDelivery4": "对于农民来说，令人印象深刻。税收是有序的。你可以离开。",
-  "npcDialogues.queenVictoria.positiveDelivery5": "很好。你设法为我缴纳了税款。宝座不会永远空无一人。",
+  "npcDialogues.queenVictoria.intro1": "哦，是你。农民，你准备好我的税款了吗？",
+  "npcDialogues.queenVictoria.intro2": "免礼，臣民。我相信你已经带来我要求的税款了？",
+  "npcDialogues.queenVictoria.intro3": "你想要什么，农民？我正为王位操心。你给我带税款来了吗？",
+  "npcDialogues.queenVictoria.intro4": "哦，糟心难忍的烦心事。快点，农民。你给我带税款来了吗？",
+  "npcDialogues.queenVictoria.intro5": "宝座闲着呢，而你偏来凑热闹。我希望你给我带税款来了，农民。",
+  "npcDialogues.queenVictoria.positiveDelivery1": "终于，做了点正事。你给我带来了税款，这边就算作记下了。",
+  "npcDialogues.queenVictoria.positiveDelivery2": "很好，这里足够了。你带来了税款。你现在可以走了。",
+  "npcDialogues.queenVictoria.positiveDelivery3": "勉强接受。你给我带来了税款。也许你并非百无一用。",
+  "npcDialogues.queenVictoria.positiveDelivery4": "拿你一介农民来说，印象深刻。税款收缴了。你可以走了。",
+  "npcDialogues.queenVictoria.positiveDelivery5": "很好。你设法缴纳了税款。宝座不会永远空无一人。",
   "npcDialogues.queenVictoria.negativeDelivery1": "这是什么？你没给我报税吗？太令人失望了。",
-  "npcDialogues.queenVictoria.negativeDelivery2": "太可悲了。没有税？你预计王国将如何蓬勃发展？",
-  "npcDialogues.queenVictoria.negativeDelivery3": "太可耻了。你来找我没交税。这是不可接受的。",
-  "npcDialogues.queenVictoria.negativeDelivery4": "真的吗？没有税？我应该知道不要对农民抱太大期望。",
-  "npcDialogues.queenVictoria.negativeDelivery5": "没用！没有税收，我怎样才能维持王国的财富？",
-  "npcDialogues.queenVictoria.noOrder1": "嗯，看来我目前没有任务要你做。你可以自由离开，但别忘了谁在这里统治。",
-  "npcDialogues.queenVictoria.noOrder2": "农民，目前没有现行命令。认为自己很幸运。走吧。",
-  "npcDialogues.queenVictoria.reward": "好吧，我想你的服务应该得到一个代币。不要经常指望会这样。",
-  "npcDialogues.queenVictoria.flowerIntro": "你看过华丽的报春花之谜了吗？我想要一个...",
-  "npcDialogues.queenVictoria.averageFlower": "这不是我所设想的，但我想它会的。把它留在这里。",
-  "npcDialogues.queenVictoria.badFlower": "这完全不合适。给我找个好点的，农民。",
-  "npcDialogues.queenVictoria.goodFlower": "啊，太棒了！这个 Primula Enigma 正是我想要的。干得好，一次。",
-  "npcDialogues.gambit.intro1": "呵呵，我们这里有什么？准备好玩机会游戏了吗，朋友？",
-  "npcDialogues.gambit.intro2": "好吧，好吧，如果这不是我最喜欢的冒险者！想下注吗？",
-  "npcDialogues.gambit.intro3": "问候，我的冒险家同伴！我们今天可以试试运气吗？",
-  "npcDialogues.gambit.intro4": "啊，一张新面孔！准备好赌博致富了吗？也许是不幸？",
-  "npcDialogues.gambit.intro5": "嘿！想玩一场充满智慧和机会的游戏吗？赌注很高，就像我喜欢的那样。",
+  "npcDialogues.queenVictoria.negativeDelivery2": "太可悲了。没有税？你算计这王国得如何蓬勃发展？",
+  "npcDialogues.queenVictoria.negativeDelivery3": "太可耻了。你没交税还来找我。不可接受。",
+  "npcDialogues.queenVictoria.negativeDelivery4": "真的吗？没带税？我就应该知道不要对农民抱太大期望。",
+  "npcDialogues.queenVictoria.negativeDelivery5": "废物！没有税收，我怎样才能维持王国财政？",
+  "npcDialogues.queenVictoria.noOrder1": "嗯，看来我目前没有任务要你做。你可以自由离开，但别忘了是谁在统治这里。",
+  "npcDialogues.queenVictoria.noOrder2": "农民，目前没有生效订单。当作自己走运。走吧。",
+  "npcDialogues.queenVictoria.reward": "很好，我想你的服务值得嘉奖物质证明。别指望经常会有。",
+  "npcDialogues.queenVictoria.flowerIntro": "你看到过精美的报春帘花了吗？我想要一个……",
+  "npcDialogues.queenVictoria.averageFlower": "这不是我预想的，但我想它也凑合。把它留在这里。",
+  "npcDialogues.queenVictoria.badFlower": "这合适不了一点。给我找个好点的，农民。",
+  "npcDialogues.queenVictoria.goodFlower": "啊，太棒了！这朵报春帘花正是我想要的。干得好，这一回。",
+  "npcDialogues.gambit.intro1": "呵呵，看看是谁来了？准备好玩一把赌运游戏了吗，朋友？",
+  "npcDialogues.gambit.intro2": "好嘞，好嘞，除了我最爱的胆大冒险家还能是谁呢！想下注吗？",
+  "npcDialogues.gambit.intro3": "致意，我的冒险家同僚！今天要来试试运气不？",
+  "npcDialogues.gambit.intro4": "啊，新面孔！准备好赌出好运了吗？也有可能是厄运？",
+  "npcDialogues.gambit.intro5": "嘿那边的！想玩一场机智与机会的游戏吗？赌注可高，我就喜欢这样。",
   "npcDialogues.gambit.positiveDelivery1": "啊哈！你成功了！看来今天运气站在你这边。",
-  "npcDialogues.gambit.positiveDelivery2": "玩得好！你带的正是我需要的东西。财富偏爱大胆的人！",
-  "npcDialogues.gambit.positiveDelivery3": "完美！你交付的正是我想要的。让我们看看你的运气是否还好！",
-  "npcDialogues.gambit.positiveDelivery4": "太棒了！你有我需要的东西。看来这次的赔率对你有利。",
-  "npcDialogues.gambit.positiveDelivery5": "太棒了！你带来了我想要的东西。也许还有更多的财富可以找到。",
-  "npcDialogues.gambit.negativeDelivery1": "哦，运气不好！你没有我需要的东西。下次祝你好运！",
-  "npcDialogues.gambit.negativeDelivery2": "不完全是我所希望的。继续努力，也许赔率会对你有利。",
-  "npcDialogues.gambit.negativeDelivery3": "啊，运气不好！你没有。但是不要放弃，总会有另一个机会！",
-  "npcDialogues.gambit.negativeDelivery4": "差不多，但还不完全！你没有我要找的东西。再试一次，游戏还没有结束。",
-  "npcDialogues.gambit.negativeDelivery5": "哎哟，这次看来你运气不好。但是别担心，继续玩下去，你最终会赢的。",
-  "npcDialogues.gambit.noOrder1": "看来我现在没有赌注给你。稍后再来看看我们能下什么赌注！",
-  "npcDialogues.gambit.noOrder2": "朋友，今天不给你玩游戏。但是坚持下去，赌注总是在变化！",
+  "npcDialogues.gambit.positiveDelivery2": "厉害！你带的正是我需要的东西。富贵险中求！",
+  "npcDialogues.gambit.positiveDelivery3": "完美！你交付的正是我想要的。让我们看看你的运气能撑多久！",
+  "npcDialogues.gambit.positiveDelivery4": "太棒了！你有我需要的东西。看来这次的赔率对你有利啊。",
+  "npcDialogues.gambit.positiveDelivery5": "太棒了！你带来了我想要的东西。也许还有更多的财宝等着发现呢。",
+  "npcDialogues.gambit.negativeDelivery1": "哦，运气真糟！你没有我需要的东西。祝你下次好运！",
+  "npcDialogues.gambit.negativeDelivery2": "不完全是我所希望的。继续努力，没准时来运转呢。",
+  "npcDialogues.gambit.negativeDelivery3": "啊，运气真霉！你身上没有。但是不要放弃，总会有另一次机会！",
+  "npcDialogues.gambit.negativeDelivery4": "差不多，但还不太行！你没有我要找的东西。再试一次，游戏还没结束呢。",
+  "npcDialogues.gambit.negativeDelivery5": "哎哟，这次看来你运气不好。但是别担心，继续玩下去，你总会赢的。",
+  "npcDialogues.gambit.noOrder1": "看来我现在没有赌局给你。稍后再来看看我们能下什么赌注！",
+  "npcDialogues.gambit.noOrder2": "朋友，今天不和你玩游戏。但别走太远，赌注总是会变的！",
   "npcDialogues.jester.intro1": "啊，球场上有新面孔！准备好开一两个玩笑了吗？",
   "npcDialogues.jester.intro2": "问候，朋友！想以牺牲皇室为代价笑一笑吗？",
   "npcDialogues.jester.intro3": "好吧，好吧，看看谁为球场增光添彩！有好笑话吗？",
@@ -3726,8 +3726,8 @@
   "crafting.noRecipe": "没有食谱",
   "ready": "准备好了",
   "instant": "即时",
-  "bounties.sell.coins": "你确定要以 {{amount}} 硬币出售这个吗？",
-  "bounties.sell.items": "你确定要以 [0@/美元] 的价格出售这个吗？",
+  "bounties.sell.coins": "你确定要出售这个换 {{amount}} 硬币吗？",
+  "bounties.sell.items": "你确定要出售这个换 {{amount}} 吗？",
   "crafting.inProgress": "进行中",
   "bounties.flower.intro.one": "你好 Bumpkin！本周我们有鲜花赏金。",
   "bounties.flower.intro.two": "把你最好的花带给我，我会让你花点时间的。",
