--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -3697,11 +3697,11 @@
   "faction.claimEmblems.claimMessage": "你贡献了 {{count}} 个派系点数。你的等级是 {{rank}}。你在 {{Faction}} 中位居前 {{percentile}}%。",
   "flower.breed.yellowCarnation": "Bumpkins 不看重黄色的康乃馨。",
   "noBumpkin.bumpkinHelp": "你需要一个 Bumpkin 来帮助你种植、收割、砍伐、开采和扩张土地。即将支持添加 Bumpkin！",
-  "chores.weeklyChores": "每周琐事",
-  "chores.completeChoresToEarn": "完成 Bumpkins 的琐事即可获得 {{seasonalTicket}} s。",
+  "chores.weeklyChores": "时季农活",
+  "chores.completeChoresToEarn": "完成乡包佬的农活即可获得 {{seasonalTicket}} 。",
   "chores.lockedChore": "等级 {{level}}",
-  "chores.completed": "已完成",
-  "chores.complete": "已完成",
+  "chores.completed": "已经交付",
+  "chores.complete": "进行交付",
   "howToGetThisItem.crimsonCarp": "在过去的某些赛季中，它是通过游戏玩法获得的。",
   "howToGetThisItem.battleFish": "在《派系冲突》赛季中，它可以通过游戏获得。",
   "howToGetThisItem.lemonShark": "它是通过法老宝藏季的游戏玩法获得的。",
