--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4075,9 +4075,9 @@
   "chore.cook.5.carrot.cakes": "Cook 5 Carrot Cakes",
   "chore.cook.4.cabbage.cakes": "Cook 4 Cabbage Cakes",
   "megaStore.msg1": "Welcome to my seasonal store. Gather resources & exchange them for rare items before time runs out!",
-  "megaStore.tier.rare.requirements": "Buy 4 basic items to unlock rare items.",
-  "megaStore.tier.epic.requirements": "Buy 4 rare items to unlock epic items.",
-  "megaStore.tier.mega.requirements": "Buy 4 epic items to unlock mega items.",
+  "megaStore.tier.rare.requirements": "Buy 4 different basic items to unlock rare items.",
+  "megaStore.tier.epic.requirements": "Buy 4 different rare items to unlock epic items.",
+  "megaStore.tier.mega.requirements": "Buy 4 different epic items to unlock mega items.",
   "animal.notEnoughFood": "Not enough food available",
   "feeder.foodTypes.food": "Food",
   "feeder.foodTypes.medicine": "Medicine",
