--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -4320,7 +4320,7 @@
   "gems.shipment.shops": "这些种子和工具将在商店补充。",
   "gems.restockToMaxStock": "补货至最大库存量",
   "restrictionReason.hasBonusAnimals": "{{building}} 中的奖励动物",
-  "landscape.timeWarpTotem.nonStack": "Time Warp Totem 和 Super Totem 无法堆叠。"
+  "landscape.timeWarpTotem.nonStack": "Time Warp Totem 和 Super Totem 无法堆叠。",
   "megaStore.tier.rare.requirements": "购买 4 种不同的基础物品来解锁稀有物品。",
   "megaStore.tier.epic.requirements": "购买 4 种不同的稀有物品来解锁史诗物品。",
   "megaStore.tier.mega.requirements": "购买 4 种不同的史诗物品来解锁巨型物品。",
