--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -2385,6 +2385,10 @@
   "marketplace.itemSold": "Item sold",
   "marketplace.congratulationsItemSold": "Congratulations, your item has sold!",
   "marketplace.youHaveHadSales": "You item(s) sold while you were away!",
+  "marketplace.yourListings": "Your listings",
+  "marketplace.cancelListing": "Cancel Listing",
+  "marketplace.cancelListing.areYouSure": "Are you sure you want to cancel this listing?",
+  "marketplace.cancelListing.selectListing": "Please select the listing you want to cancel.",
   "megaStore.visit": "Visit the Megastore in the plaza before time runs out!",
   "megaStore.message": "Welcome to the Mega Store! Check out this month's limited items. If you like something, be sure to grab it before it vanishes into the realms of time.",
   "megaStore.month.sale": "This month's sales",
