--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -2379,6 +2379,9 @@
   "marketplace.offering.success": "Congratulations, you have successfully made an offer. Now be patient and wait for a Bumpkin to accept!",
   "marketplace.listing.success": "Congratulations, you have successfully listed your item for sale. Now be patient and wait for a Bumpkin to buy it!",
   "marketplace.listing.failure": "Oops, something went wrong. Please try again.",
+  "marketplace.listing.cancelling": "Cancelling listing",
+  "marketplace.listing.cancelling.success": "Congratulations, you have successfully cancelled your listing!",
+  "marketplace.listing.cancelling.failure": "Oops, something went wrong. Please try again.",
   "marketplace.itemInUseWarning": "This item is currently being used on your farm. You must first remove it into your chest.",
   "marketplace.noMyListings": "You do not have any listings.",
   "marketplace.offerClaimed": "Congratulations, your offer was accepted!",
