--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3740,7 +3740,8 @@
   "crafting.readySoon": "{{name}} will be ready soon...",
   "crafting.expansionSoon": "Your land will be ready soon...",
   "crafting.viewRecipes": "View recipes",
-  "gems.buyReplenish": "Would you like to replenish the {{shopName}} now for 20 Gems?",
+  "gems.buyReplenish": "Would you like to replenish the shops now for 20 Gems?",
+  "gems.buyReplenish.enhanced": "Would you like to replenish the {{shopName}} now for {{gemPrice}} Gems?",
   "gems.restockToMaxStock": "Restocks up to maximum stock",
   "gems.noShipment": "No Shipment",
   "gems.buyStock": "Please buy your stock to get your shipment.",
