Update Restock option modal

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3738,10 +3738,10 @@
   "crafting.readySoon": "{{name}} will be ready soon...",
   "crafting.expansionSoon": "Your land will be ready soon...",
   "crafting.viewRecipes": "View recipes",
-  "gems.buyReplenish": "Would you like to restock the shops for 20 Gems?",
+  "gems.buyReplenish": "Would you like to restock all the shops for 20 Gems?",
   "gems.buyReplenish.enhanced": "Would you like to restock the {{shopName}} for {{gemPrice}} Gems?",
-  "restock.category": "Restock {{category}}",
-  "restock.all": "Restock all",
+  "restock.category": "Restock {{shopName}}",
+  "restock.all": "Restock all shops",
   "market": "market",
   "workbench": "workbench",
   "treasure.shop": "treasure shop",
