Show contents of restock in selection modal

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -1898,6 +1898,7 @@
   "resources": "Resources",
   "resource.nodes": "Resource Nodes",
   "restock": "Restock",
+  "restocks": "Restocks",
   "retry": "Retry",
   "reward": "Reward",
   "reward.discovered": "Reward Discovered",
@@ -3740,8 +3741,10 @@
   "crafting.viewRecipes": "View recipes",
   "gems.buyReplenish": "Would you like to restock all the shops for 20 Gems?",
   "gems.buyReplenish.enhanced": "Would you like to restock the {{shopName}} for {{gemPrice}} Gems?",
-  "restock.category": "Restock {{shopName}}",
-  "restock.all": "Restock all shops",
+  "restock.shop": "{{shopName}} Restock",
+  "restock.full": "Full Restock",
+  "restock.outOfStock": "Looks like you have ran out of stock!",
+  "restock.selectOption": "Select your desired restock option",
   "market": "market",
   "workbench": "workbench",
   "treasure.shop": "treasure shop",
