Use labels instead of icons

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3743,8 +3743,8 @@
   "gems.buyReplenish.enhanced": "Would you like to restock the {{shopName}} for {{gemPrice}} Gems?",
   "restock.shop": "{{shopName}} Restock",
   "restock.full": "Full Restock",
-  "restock.outOfStock": "Looks like you have ran out of stock!",
-  "restock.selectOption": "Select your desired restock option",
+  "restock.outOfStock": "Looks like you ran out of stock!",
+  "restock.selectOption": "Select your desired restock option:",
   "market": "market",
   "workbench": "workbench",
   "treasure.shop": "treasure shop",
