--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -2379,12 +2379,19 @@
   "marketplace.offering.success": "Congratulations, you have successfully made an offer. Now be patient and wait for a Bumpkin to accept!",
   "marketplace.listing.success": "Congratulations, you have successfully listed your item for sale. Now be patient and wait for a Bumpkin to buy it!",
   "marketplace.listing.failure": "Oops, something went wrong. Please try again.",
+  "marketplace.listing.cancelling": "Cancelling listing",
+  "marketplace.listing.cancelling.success": "Congratulations, you have successfully cancelled your listing!",
+  "marketplace.listing.cancelling.failure": "Oops, something went wrong. Please try again.",
   "marketplace.itemInUseWarning": "This item is currently being used on your farm. You must first remove it into your chest.",
   "marketplace.noMyListings": "You do not have any listings.",
   "marketplace.offerClaimed": "Congratulations, your offer was accepted!",
   "marketplace.itemSold": "Item sold",
   "marketplace.congratulationsItemSold": "Congratulations, your item has sold!",
   "marketplace.youHaveHadSales": "You item(s) sold while you were away!",
+  "marketplace.yourListings": "Your listings",
+  "marketplace.cancelListing": "Cancel Listing",
+  "marketplace.cancelListing.areYouSure": "Are you sure you want to cancel this listing?",
+  "marketplace.cancelListing.selectListing": "Please select the listing you want to cancel.",
   "megaStore.visit": "Visit the Megastore in the plaza before time runs out!",
   "megaStore.message": "Welcome to the Mega Store! Check out this month's limited items. If you like something, be sure to grab it before it vanishes into the realms of time.",
   "megaStore.month.sale": "This month's sales",
