More styling changes

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -1898,7 +1898,6 @@
   "resources": "Resources",
   "resource.nodes": "Resource Nodes",
   "restock": "Restock",
-  "restocks": "Restocks",
   "retry": "Retry",
   "reward": "Reward",
   "reward.discovered": "Reward Discovered",
@@ -3743,14 +3742,13 @@
   "gems.buyReplenish.enhanced": "Would you like to restock the {{shopName}} for {{gemPrice}} Gems?",
   "restock.shop": "{{shopName}} Restock",
   "restock.full": "Full Restock",
-  "restock.outOfStock": "Looks like you ran out of stock!",
+  "restock.outOfStock": "Looks like you ran out of stock from {{npc}}!",
   "restock.selectOption": "Select your desired restock option:",
   "restock.itemsToRestock": "The following items will be restocked:",
   "market": "market",
   "workbench": "workbench",
   "treasure.shop": "treasure shop",
-  "workbench.tools": "workbench tools",
-  "treasure.tools": "treasure tools",
+  "digging": "digging",
   "gems.restockToMaxStock": "Restocks up to maximum stock",
   "gems.noShipment": "No Shipment",
   "gems.buyStock": "Please buy your stock to get your shipment.",
