--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3745,10 +3745,14 @@
   "restock.outOfStock": "Looks like you ran out of stock from {{npc}}!",
   "restock.selectOption": "Select your desired restock option:",
   "restock.itemsToRestock": "The following items will be restocked:",
+  "restock.moreStock": "Restock to get more stock.",
+  "restock.dailyShipment": "Daily Shipment",
   "market": "market",
   "workbench": "workbench",
   "treasure.shop": "treasure shop",
   "digging": "digging",
+  "basic.seeds": "Basic Seeds",
+  "medium.seeds": "Medium Seeds",
   "gems.restockToMaxStock": "Restocks up to maximum stock",
   "gems.noShipment": "No Shipment",
   "gems.buyStock": "Please buy your stock to get your shipment.",
