--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3742,7 +3742,7 @@
   "gems.buyReplenish.enhanced": "Would you like to restock the {{shopName}} for {{gemPrice}} Gems?",
   "restock.shop": "{{shopName}} Restock",
   "restock.full": "Full Restock",
-  "restock.outOfStock": "Looks like you ran out of stock from {{npc}}!",
+  "restock.outOfStock": "{{npc}} ran out of stock. Choose your desired restock option below:",
   "restock.selectOption": "Select your desired restock option:",
   "restock.itemsToRestock": "The following items will be restocked:",
   "restock.moreStock": "Restock to get more stock.",
