[FEAT] Restock by Shop (#4764)
* initial test

* Apply to UI

* Update UI

* Separate old and new restock UI

* Separate old and new restock functions

* add new term

* Feature Flag

* Add tests

* Put the shopName in Object

* Update analytics value

* Update old function

* lint

* Add additional tests

* Add additional conditions for shipment restock

* translations

* refactor enhanced restock modal

* Add just in case disabled condition

* simplify code

* CanRestock should take gemPrice

* Remove disabled conditions

* Fix tests

* Move button down

* More styling changes

* Convert Panels to Buttons

* Translations

* Conditions

* Add missing gem count

* Add option to to restock all shops

* Button formatting

* Adjust restock costs

* Reorganise files

* Styling

* styling

* Rename files

* Update Restock option modal

* Increase price

* Show contents of restock in selection modal

* Shipiment message

* Use labels instead of icons

* fix lint

* Rename enhancedRestock to npcRestock

---------

Co-authored-by: adamhannigan <adamhannigan@users.noreply.github.com>

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3068,8 +3068,6 @@
   "magicMushroom.description": "Used to cook advanced recipes",
   "wildMushroom.description": "Used to cook basic recipes",
   "honey.description": "Used to sweeten your cooking",
-  "restock.one.buck": "You are going to use 20 Gems to restock all shop items in the game.",
-  "restock.sure": "Are you sure you want to Restock?",
   "restock.tooManySeeds": "You have too many seeds in your basket!",
   "seeds.reachingInventoryLimit": "You are reaching your seed basket limit!",
   "crops.noCropsToSell": "You have no {{cropName}} to sell!",
@@ -3740,7 +3738,21 @@
   "crafting.readySoon": "{{name}} will be ready soon...",
   "crafting.expansionSoon": "Your land will be ready soon...",
   "crafting.viewRecipes": "View recipes",
-  "gems.buyReplenish": "Would you like to replenish the shops now for 20 Gems?",
+  "gems.buyReplenish": "Would you like to restock all the shops for 20 Gems?",
+  "gems.buyReplenish.enhanced": "Would you like to restock the {{shopName}} for {{gemPrice}} Gems?",
+  "restock.shop": "{{shopName}} Restock",
+  "restock.full": "Full Restock",
+  "restock.outOfStock": "{{npc}} ran out of stock. Choose your desired restock option below:",
+  "restock.selectOption": "Select your desired restock option:",
+  "restock.itemsToRestock": "The following items will be restocked:",
+  "restock.moreStock": "Restock to get more stock.",
+  "restock.dailyShipment": "Daily Shipment",
+  "market": "market",
+  "workbench": "workbench",
+  "treasure.shop": "treasure shop",
+  "digging": "digging",
+  "basic.seeds": "Basic Seeds",
+  "medium.seeds": "Medium Seeds",
   "gems.restockToMaxStock": "Restocks up to maximum stock",
   "gems.noShipment": "No Shipment",
   "gems.buyStock": "Please buy your stock to get your shipment.",
