Rewrite crop descriptions

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -67,7 +67,7 @@
   "treasureHunter.description": "Dig 10 holes",
   "treasureHunter.one": "Ahoy, treasure hunter! Sunflower Land is full of hidden treasures waiting to be discovered.",
   "treasureHunter.two": "Grab your shovel and head to Treasure Island, where you can dig for valuable items and rare surprises.",
-  "eggcellentCollection.description": "Collect 10 Eggs",
+  "eggcellentCollection.description": "Collect Eggs 10 times",
   "eggcellentCollection.one": "Howdy, egg collector! Chickens are wonderful farm companions that provide us with delicious eggs.",
   "eggcellentCollection.two": "By collecting eggs, you'll have a fresh supply of ingredients for cooking, and you'll also unlock special recipes and bonuses.",
   "addSFL.swapDetails": "Sunflower Land provides a quick way to swap POL for SFL via Quickswap.",
@@ -3858,18 +3858,18 @@
   "chore.pick.25.lemons": "Pick 25 Lemons",
   "chore.pick.40.lemons": "Pick 40 Lemons",
   "chore.pick.65.lemons": "Pick 65 Lemons",
-  "chore.harvest.450.parsnips": "Harvest 450 Parsnips",
-  "chore.harvest.500.parsnips": "Harvest 500 Parsnips",
-  "chore.harvest.250.eggplants": "Harvest 250 Eggplants",
-  "chore.harvest.300.eggplants": "Harvest 300 Eggplants",
-  "chore.harvest.275.corn": "Harvest 275 Corn",
-  "chore.harvest.300.corn": "Harvest 300 Corn",
-  "chore.harvest.200.radishes": "Harvest 200 Radishes",
-  "chore.harvest.240.radishes": "Harvest 240 Radishes",
-  "chore.harvest.200.wheat": "Harvest 200 Wheat",
-  "chore.harvest.240.wheat": "Harvest 240 Wheat",
-  "chore.harvest.175.kale": "Harvest 175 Kale",
-  "chore.harvest.200.kale": "Harvest 200 Kale",
+  "chore.harvest.450.parsnips": "Harvest Parsnips 450 times",
+  "chore.harvest.500.parsnips": "Harvest Parsnips 500 times",
+  "chore.harvest.250.eggplants": "Harvest Eggplants 250 times",
+  "chore.harvest.300.eggplants": "Harvest Eggplants 300 times",
+  "chore.harvest.275.corn": "Harvest Corn 275 times",
+  "chore.harvest.300.corn": "Harvest Corn 300 times",
+  "chore.harvest.200.radishes": "Harvest Radish 200 times",
+  "chore.harvest.240.radishes": "Harvest Radish 240 times",
+  "chore.harvest.200.wheat": "Harvest Wheat 200 times",
+  "chore.harvest.240.wheat": "Harvest Wheat 240 times",
+  "chore.harvest.175.kale": "Harvest Kale 175 times",
+  "chore.harvest.200.kale": "Harvest Kale 200 times",
   "chore.cook.15.honey.cake": "Cook 15 Honey Cake",
   "chore.cook.20.honey.cake": "Cook 20 Honey Cake",
   "chore.cook.3.parsnip.cake": "Cook 3 Parsnip Cake",
@@ -3985,9 +3985,9 @@
   "chore.harvest.10.cauliflowers": "Harvest 10 Cauliflowers",
   "chore.harvest.20.cauliflowers": "Harvest 20 Cauliflowers",
   "chore.harvest.30.cauliflowers": "Harvest 30 Cauliflowers",
-  "chore.collect.10.eggs": "Collect 10 Eggs",
-  "chore.collect.15.eggs": "Collect 15 Eggs",
-  "chore.collect.20.eggs": "Collect 20 Eggs",
+  "chore.collect.10.eggs": "Collect Eggs 10 times",
+  "chore.collect.15.eggs": "Collect Eggs 15 times",
+  "chore.collect.20.eggs": "Collect Eggs 20 times",
   "chore.eat.5.anchovies": "Eat 5 Anchovies",
   "chore.eat.10.anchovies": "Eat 10 Anchovies",
   "chore.eat.15.anchovies": "Eat 15 Anchovies",
@@ -4072,9 +4072,9 @@
   "chore.grow.3.white.cosmos": "Grow 3 White Cosmos",
   "chore.grow.6.purple.daffodil": "Grow 6 Purple Daffodil",
   "chore.grow.6.red.balloon.flower": "Grow 6 Red Balloon Flower",
-  "chore.collect.40.eggs": "Collect 40 Eggs",
-  "chore.collect.60.eggs": "Collect 60 Eggs",
-  "chore.collect.80.eggs": "Collect 80 Eggs",
+  "chore.collect.40.eggs": "Collect Eggs 40 times",
+  "chore.collect.60.eggs": "Collect Eggs 60 times",
+  "chore.collect.80.eggs": "Collect Eggs 80 times",
   "chore.eat.5.bumpkin.ganoush": "Eat 5 Bumpkin ganoush",
   "chore.eat.5.cauliflower.burger": "Eat 5 Cauliflower Burger",
   "chore.eat.4.club.sandwich": "Eat 4 Club Sandwich",
